--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,9 +14,11 @@
   <form>
       <div class="search-form">
         <input type="text" class="film-search-input" placeholder="Поиск фильмов" />
+        <button class="input-search-button">
         <svg class="search-icon">
           <use href="./images/symbol-defs.svg#icon-search"></use>
         </svg>
+        </button>
       </div>
     </form>  
     <span class="error-message is-hiden">Search result not successful. Enter the correct movie name and</span> 
@@ -26,3 +28,6 @@
     </div>
   
 </header>
+
+
+
