--- a/src/sass/layout/_header-styles.scss
+++ b/src/sass/layout/_header-styles.scss
@@ -127,6 +127,10 @@ img {
   color: #ffffff;
 }
 
+.input-search-button {
+  background: none;
+  border: none;
+}
 .header-logo {
   width: 141px;
   height: 35px;
@@ -266,9 +270,9 @@ img {
   height: 3px;
   border-radius: 2px;
   width: 0%;
-  -webkit-transition: width 0.4s ease-in-out;
-  -moz--transition: width 0.4s ease-in-out;
-  transition: width 0.4s ease-in-out;
+  -webkit-transition: width 0.1s ease-in-out;
+  -moz--transition: width 0.1s ease-in-out;
+  transition: width 0.1s ease-in-out;
 }
 a:hover:after,
 a:focus:after {
