реализовал запись и удаление с localStorage

--- a/src/templates/movie-card.hbs
+++ b/src/templates/movie-card.hbs
@@ -10,7 +10,7 @@
             <b>{{genre}}</b>
            </p>
            <p class="info-relise">
-            <b>{{relise}}</b>
+            <b>{{release}}</b>
            </p>
         </div> 
 
