--- a/src/templates/modal-card.hbs
+++ b/src/templates/modal-card.hbs
@@ -24,12 +24,12 @@
             <li class="modal__list-item">
                 <div class="modal__left-column">Original Title</div>
                 <div class="modal__right-column">
-                    <span class="modal__original-title">{{original_title}}</span>
+                    <span class="modal__original-title">{{name}}</span>
                 </div>
             </li>
             <li class="modal__list-item">
                 <div class="modal__left-column">Genre</div>
-                <div class="modal__right-column"><span class="modal__movie-genre">{{genres}}</span></div>
+                <div class="modal__right-column"><span class="modal__movie-genre">{{genre}}</span></div>
             </li>
         </ul>
         <div class="modal__description">
