--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,6 +17,8 @@
 @import './layout/modal-window';
 @import './layout/footer';
 @import './layout/movie-cards';
+@import './layout/scrollTop';
+@import './layout/loader';
 
 //utils
 @import './utils/body-lock';
