--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,9 +11,9 @@
         <a class="main-header-library-anchor" id="library-navigation-btn" href="#">my library</a>
   </div>
   
-  <form>
+  <form id="search-form">
       <div class="search-form">
-        <input type="text" class="film-search-input" placeholder="Поиск фильмов" />
+        <input type="text" name="searchQuery" class="film-search-input" placeholder="Поиск фильмов" />
         <button class="input-search-button" type="submit">
         <svg class="search-icon">
           <use href="./images/symbol-defs.svg#icon-search"></use>
