--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -4,12 +4,15 @@
                 
             </li> -->
   </ul>
-  <ul class="movies list watched-gallery is-hiden">
+  <ul
+    class="movies list watched-gallery is-hiden"
+    style="min-height: 30px; background-color: tomato"
+  >
     <!-- <li class="movies__item">
                 
             </li> -->
   </ul>
-  <ul class="movies list queue-gallery is-hiden">
+  <ul class="movies list queue-gallery is-hiden" style="min-height: 30px; background-color: aqua">
     <!-- <li class="movies__item">
                 
             </li> -->
