--- a/src/sass/layout/_movie-cards.scss
+++ b/src/sass/layout/_movie-cards.scss
@@ -29,3 +29,9 @@
   padding-left: 5px;
   border-left: 1px solid rgba(255, 107, 8, 1);
 }
+
+.shadow {
+  &:hover {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+}
