--- a/src/templates/modal-card.hbs
+++ b/src/templates/modal-card.hbs
@@ -37,8 +37,8 @@
             <p class="modal__description-text">{{about}}</p>
         </div>
         <div class="modal__buttons">
-            <button type="button" class="btn-in-modal" data-category="watched">add to watched</button>
-            <button type="button" class="btn-in-modal" data-category="queue">add to queue</button>
+            <button type="button" class="btn-in-modal" data-category="watched"></button>
+            <button type="button" class="btn-in-modal" data-category="queue"></button>
         </div>
     </div>
 </div>
