--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -4,10 +4,7 @@
                 
             </li> -->
   </ul>
-  <ul
-    class="movies list watched-gallery is-hiden"
-    style="min-height: 30px; background-color: tomato"
-  >
+  <ul class="movies list watched-gallery is-hiden" style="min-height: 30px">
     <!-- <li class="movies__item">
                 
             </li> -->
