С кнопками и localStorage закончил

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -31,6 +31,11 @@
 .btn-in-modal:hover {
   transform: scale(1.1);
 }
+.btn-in-modal:hover {
+  border: 1px solid #ff6b01;
+  background-color: #ff6b01;
+  color: #fff;
+}
 
 .btn-library {
   width: 130px;
