--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -9,7 +9,7 @@
                 
             </li> -->
   </ul>
-  <ul class="movies list queue-gallery is-hiden" style="min-height: 30px; background-color: aqua">
+  <ul class="movies list queue-gallery is-hiden" style="min-height: 30px">
     <!-- <li class="movies__item">
                 
             </li> -->
