--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,27 +1,91 @@
 .footer {
-    margin-top: auto;
-    padding-top: 30px;
-    padding-bottom: 28px;
-    
-  }
-  
-  .footer-wrapper {
-    text-align: center;
-  }
-  
-  .footer-wrapper__text {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 2;
-    
-  }
-  
-  .footer-wrapper__svg {
-    margin: 0px 10px;
-  }
-  
-  .footer-wrapper__underline {
-    text-decoration-line: underline;
-    cursor: pointer;
-  }
+  padding-top: 29px;
+  padding-bottom: 29px;
+  background-color: #F7F7F7;  
+}
+@media screen and (min-width: 768px) {
+.footer {
+  padding-top: 30px;
+  padding-bottom: 28px;
+}
+}
+@media screen and (min-width: 1024px) {
+.footer {
+  padding-top: 30px;
+  padding-bottom: 28px;
+}
+}
+.page-footer {
+text-align: center;
+}
+@media screen and (min-width:768px) {
+.footer-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+}
+.footer-text {
+margin: 0;
+font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 14px;
+line-height: 1.2;
+color: #545454;
+}
+@media screen and (min-width: 768px) {
+.footer-text{
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.2;
+}  
+}
+.icon-heart {
+display: inline-block;
+width: 14px;
+height: 13px;
+margin-left: 10px;
+margin-right: 10px;
+}
+#footerBtn {
+font-family: Roboto;
+font-weight: normal;
+font-size: 14px;
+line-height: 1.2;
+padding: 0;
+color: #545454;
+border: none;
+background-color: #F7F7F7;
+cursor: pointer;
+}
+#footerBtn:hover,
+#footerBtn:focus {
+color: #FF6B08;
+}
+.modalFooter {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.8)
+}
+.modal-content {
+  background-color: #FEFEFE;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px  solid #888;
+  width: 80%;
+}
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
