--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,14 +1,15 @@
-<footer class="footer">
-    <div class="container">
-      <div class="footer-wrapper"style="display: flex; justify-content: center;">
-        <p class="footer-wrapper__text"style="display: flex; gap: 10px; align-items: center">
-         <span class="footer-wrapper__text--rights"> © 2021 | All Rights Reserved | Developed with </span>
-          <svg class="footer-wrapper__svg" width="14px" height="12.75px">
-            <use href="./images/symbol-defs.svg#icon-heart"></use>
-          </svg>
-          
-         <span id="open-button" class="footer-wrapper__underline">GoIT Students</span>
-        </p>
-      </div>
+<section class="footer">
+  <footer class="page-footer">
+    <div class="footer-container">
+      <p class="footer-text">© 2021 | All Rights Reserved |</p>
+      <p class="footer-text">Developed with<span class="">
+        <svg class="icon-heart" aria-label="heart">
+          <use href="./images/symbol-defs.svg#icon-heart"></use>
+        </svg>
+      </span>
+      <span>by</span>
+      <button id="footer-btn"><u>GoIT Students</u></button>
+    </p>
     </div>
   </footer>
+</section>
