add libraly pagination

--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,1 +1,3 @@
 <div id="pagination" class="tui-pagination"></div>
+<div id="pagination__watched" class="tui-pagination"></div>
+<div id="pagination__queue" class="tui-pagination"></div>
