--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
-<header class="firs-page-header">
-  <div class="main-header-overlay" id="header">
+<header class="main-header-overlay" id="header">
+  <div class="header-container">
     <div class="main-navigation">
       <a class="main-header-navigation" href="">
         <svg class="film-icon" width="24px" height="24px">
