--- a/src/sass/layout/_header-styles.scss
+++ b/src/sass/layout/_header-styles.scss
@@ -4,12 +4,146 @@ img {
   height: auto;
 }
 
-.firs-page-header {
-  @media screen and(max-width: 767px) {
-    margin-bottom: 20px;
+.header-container {
+  margin: auto;
+  width: 320px;
+  height: 230px;
+  @media screen and(min-width: 768px) and (max-width: 1023px) {
+    width: 768px;
+    height: 230px;
   }
-  @media screen and(min-width: 768px) {
+  @media screen and(min-width: 1024px) {
+    width: 1024px;
+    height: 230px;
+  }
+}
+// Стилизация для ретины
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (-webkit-min-device-pixel-ratio: 2),
+  screen and (-o-min-device-pixel-ratio: 2 / 1),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .main-header-overlay {
+    margin-bottom: 20px;
+
+    background: rgba(0, 0, 0, 0.56);
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(../images/header-mobile2x.jpg);
+
+    background-size: 100% auto;
+    background-position: center;
+  }
+  .library-haeder-overlay {
+    margin-bottom: 20px;
+
+    background: rgba(0, 0, 0, 0.56);
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(../images/library-mobile2x.jpg);
+
+    background-size: 100% auto;
+    background-position: center;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 10023px) and (min-device-pixel-ratio: 2),
+  screen and (min-width: 768px) and (max-width: 1023зx) and (-webkit-min-device-pixel-ratio: 2),
+  screen and (min-width: 768px) and (max-width: 1023px) and (-o-min-device-pixel-ratio: 2 / 1),
+  screen and (min-width: 768px) and (max-width: 1023px) and (min-resolution: 192dpi),
+  screen and (min-width: 768px) and (max-width: 1023px) and (min-resolution: 2dppx) {
+  .main-header-overlay {
     margin-bottom: 60px;
+
+    background: rgba(0, 0, 0, 0.56);
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(../images/header-tablet2x.jpg);
+
+    background-size: 100% auto;
+    background-position: center;
+  }
+  .library-haeder-overlay {
+    margin-bottom: 60px;
+
+    background: rgba(0, 0, 0, 0.56);
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(../images/library-tablet2x.jpg);
+
+    background-size: 100% auto;
+    background-position: center;
+  }
+}
+
+@media screen and (min-width: 1024px) and (min-device-pixel-ratio: 2),
+  screen and (min-width: 1024px) and (-webkit-min-device-pixel-ratio: 2),
+  screen and (min-width: 1024px) and (-o-min-device-pixel-ratio: 2 / 1),
+  screen and (min-width: 1024px) and (min-resolution: 192dpi),
+  screen and (min-width: 1024px) and (min-resolution: 2dppx) {
+  .main-header-overlay {
+    margin-bottom: 60px;
+    background: rgba(0, 0, 0, 0.56);
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(../images/header-desctop2x.jpg);
+
+    background-size: 100% auto;
+    background-position: center;
+  }
+  .library-haeder-overlay {
+    margin-bottom: 60px;
+
+    background: rgba(0, 0, 0, 0.56);
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(../images/library-desktop2x.jpg);
+
+    background-size: 100% auto;
+    background-position: center;
+  }
+}
+
+// //Конец блока ретины
+
+.main-header-overlay {
+  margin-bottom: 20px;
+
+  background-repeat: no-repeat;
+  background: rgba(0, 0, 0, 0.56);
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+    url(../images/main_header_mobile.jpg);
+
+  background-size: 100% auto;
+  background-position: center;
+
+  @media screen and(min-width: 768px) and (max-width: 1023px) {
+    margin-bottom: 60px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(../images/main_header_tablet.jpg);
+  }
+  @media screen and(min-width: 1024px) {
+    margin-bottom: 60px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(../images/main_header_desktop.jpg);
+  }
+}
+
+.library-haeder-overlay {
+  max-width: 100vw;
+  margin-bottom: 20px;
+  background: rgba(0, 0, 0, 0.56);
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+    url(../images/library_header_mobile.jpg);
+  background-size: 100% auto;
+  background-position: center;
+
+  @media screen and(min-width: 768px) and (max-width: 1023px) {
+    margin-bottom: 60px;
+
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(../images/library_header_tablet.jpg);
+  }
+
+  @media screen and(min-width: 1024px) {
+    margin-bottom: 60px;
+
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(../images/library_header_desktop.jpg);
   }
 }
 
@@ -138,12 +272,18 @@ img {
   z-index: 1;
   background: none;
   border: none;
+  cursor: pointer;
   @media screen and(min-width: 768px) and (max-width: 1023px) {
     left: 535px;
   }
   @media screen and(min-width: 1024px) {
     left: 660px;
   }
+}
+
+.input-search-button:hover,
+.input-search-button:focus {
+  cursor: pointer;
 }
 
 .header-logo {
@@ -222,51 +362,6 @@ img {
 .watched,
 .queue {
   margin: 10px;
-}
-.main-header-overlay {
-  margin: auto;
-  width: 320px;
-  height: 230px;
-  background: rgba(0, 0, 0, 0.56);
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-    url(../images/main_header_mobile.jpg);
-
-  @media screen and(min-width: 768px) and (max-width: 1023px) {
-    width: 768px;
-    height: 230px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-      url(../images/main_header_tablet.jpg);
-  }
-
-  @media screen and(min-width: 1024px) {
-    width: 1024px;
-    height: 230px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-      url(../images/main_header_desktop.jpg);
-  }
-}
-
-.library-haeder-overlay {
-  margin: auto;
-  width: 320px;
-  height: 230px;
-  background: rgba(0, 0, 0, 0.56);
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-    url(../images/library_header_mobile.jpg);
-
-  @media screen and(min-width: 768px) and (max-width: 1023px) {
-    width: 768px;
-    height: 230px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-      url(../images/library_header_tablet.jpg);
-  }
-
-  @media screen and(min-width: 1024px) {
-    width: 1024px;
-    height: 230px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-      url(../images/library_header_tablet.jpg);
-  }
 }
 
 .active-page {
