fixed-images-from-backend

--- a/src/templates/modal-card.hbs
+++ b/src/templates/modal-card.hbs
@@ -1,6 +1,6 @@
 <div class="modal__card">
     <div class="modal__img-wrap">
-        <img src='https://image.tmdb.org/t/p/original{{poster}}' alt="{{title}}" />
+        <img src='{{poster}}' alt="{{title}}" />
     </div>
     <div class="modal__text-content">
         <h2 class="modal__title">{{title}}</h2>
