--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,7 @@
 <footer class="footer">
   <div class="footer__container">
-    <span class="copyright">© 2020 | All Rights Reserved | Developed with</span>
-    <span class="copyright">by <a href="#">GoIT Students</a></span>
+    <span class="copyright copyright__first-line">© 2020 | All Rights Reserved |</span>
+    <span class="copyright copyright__second-line">Developed with</span>
+    <span class="copyright copyright__second-line">by <a href="#">GoIT Students</a></span>
   </div>
 </footer>
