создала mixins, container, buttons

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,10 +9,14 @@
 // import from folder utils
 @import './utils/variables';
 @import './utils/visually-hidden';
+@import './utils/mixins';
+@import './utils/placeholder';
 
 // import from folder base
 @import './base/common';
+@import './base/container';
 
 // import from folder components
+@import './components/buttons';
 
 // import from folder layout
