--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,11 +1,20 @@
 // Создано для демонстрации удалить
-.box{
-    background-color: black;
+.box {
+    //background-color: black;
     height: 150px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
+.light-theme{
+  background-color: rgb(228, 228, 228)
+}
+
+.dark-theme{
+  background-color: #000;
+}
+
 // конец
 
   .button-orange {
