--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,5 +18,6 @@
 
 // import from folder components
 @import './components/buttons';
+@import './components/toggle';
 
 // import from folder layout
