поправила миксин шрифта

--- a/src/sass/utils/_placeholder.scss
+++ b/src/sass/utils/_placeholder.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
   width: 136px;
   height: 44px;
-  @include font-DM-Sans( 16, 12, 500);
+  @include Roboto( 16, 12, 500);
   text-transform: uppercase;
 
   border-radius: 5px;
