--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -16,12 +16,12 @@
 // font-family по умолчанию - 'Roboto', sans-serif
 
 // То есть, если жирность не отличается передаем только 2 значения:
-// @include font-DM-Sans (12, 16)
+// @include Roboto (12, 16)
 
 // Если жирность отличается то 3 значения:
-// @include font-DM-Sans (12, 16, 500)
+// @include Roboto (12, 16, 500)
 
-@mixin font-DM-Sans ($lh, $fs, $fw:400, $ffamily: var(--main-font)){  
+@mixin Roboto ($lh, $fs, $fw:400, $ffamily: var(--main-font)){  
   line-height: $lh/$fs;
   font-size: $fs*1px; 
   font-weight: $fw;     
