--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,3 +16,7 @@
 // import from folder components
 
 // import from folder layout
+
+@import './components/_modal-content.sass';
+@import './components/_modal.sass';
+@import './components/backdrop.sass';
