--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,6 +17,6 @@
 
 // import from folder layout
 
-@import './components/_modal-content.sass';
-@import './components/_modal.sass';
-@import './components/backdrop.sass';
+@import './components/_modal-content.scss';
+@import './components/_modal.scss';
+@import './components/_backdrop.scss';
