--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,5 +1,6 @@
 body {
   font-family: var(--main-font);
+  margin: 0;
 }
 
 h1,
@@ -13,6 +14,9 @@ ul,
 p {
   margin: 0;
   padding: 0;
+}
+li {
+  list-style-type: none;
 }
 
 img {
@@ -35,4 +39,5 @@ svg {
 }
 
 body.modal-open {
-  overflow: hidden}
+  overflow: hidden;
+}
