--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,38 @@
 
+    <header class="header">
+   <div class="container"> 
+    <div class="header-section">
+      <nav class="navigation">
+        <a class="logo logo__common" >
+          <svg class="logo__icon" width="24" height="24">
+            <use href="../src/sprite/symbol-defs.svg#film"></use>
+          </svg>
+          <span class="logo__name">Filmoteka</span>
+        </a>
+        <ul class="site-nav">
+          <li class="site-nav__item">
+              <a href="" class="site-nav__link site-nav__link--current-page home link">
+              Home</a></li>
+          <li class="site-nav__item"> <a href="" class="site-nav__link library link">
+              Library</a></li>
+        </ul>
+      </nav>
+      <form class="search-form" id="search-form">
+        <input
+          class="search-input"
+          type="text"
+          name="input"
+          autocomplete="off"
+          placeholder="Поиск фильмов"
+        />
+        <button type="submit" class="search-button">
+            <svg class="search-icon" width='12'height="12">
+                <use href = "../src/sprite/symbol-defs.svg#search">
+            </svg>
+        </button>
+      </form>
+    </div>
+  </div>
+</header>
+
+
