--- a/src/partials/home-movies.html
+++ b/src/partials/home-movies.html
@@ -1,3 +1,3 @@
-<section class="container">
-    <ul class="movies__colection"></ul>
+<section class="movies">
+  <ul class="movies__colection"></ul>
 </section>
