adds data-source ID for movie card

--- a/src/templates/gallery.hbs
+++ b/src/templates/gallery.hbs
@@ -2,7 +2,7 @@
 <li class="item">
     <a class="link" href="#">
     <div class="video-card">
-        <img class="gallery__video" src="https://image.tmdb.org/t/p/w300/{{poster_path}}" data-source="" />
+        <img class="gallery__video" src="https://image.tmdb.org/t/p/w300/{{poster_path}}" data-source="{{id}}" />
         <span class="video-rating"></span>
     </div>
     <h2 class="video-title">{{original_title}} </h2>
