add component logo

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,53 +1,46 @@
 <header class="header">
-	<div class="container">
-		<nav class="navigation">
-			<a class="logo link" lang="en" href="./index.html">
-				Hell
-				<svg class="logo-svg" width="" height="">
-					<use href="./images/svg/sprite.svg#fire"></use>
-				</svg>
-				EN
-				<span class="under-logo"> <span class="under-logo-orange">Адский</span> английский</span>
-			</a>
-			<a href="#tel" class="button-tablet link">Консультация по телефону</a>
-			<button type="button" class="menu-button" aria-expanded="false" aria-expanded="false"
-				aria-controls="menu-conteiner" data-menu-button>
-				<svg class="icon-svg" width="22" height="16" aria-label="Переключатель мобильного меню">
-					<use class="icon-menu" href="./images/svg/sprite.svg#menu"></use>
-					<use class="icon-cross" href="./images/svg/sprite.svg#close"></use>
+  <div class="container">
+    <nav class="nav">
+      <div class="menu-logo">
+        <include src="./partials/components/logo.html"></include>
+      </div>
+      <button
+        type="button"
+        class="menu-button"
+        aria-expanded="false"
+        aria-controls="menu-conteiner"
+        data-menu-button
+      >
+        <svg class="button-svg" aria-label="Переключатель мобильного меню">
+          <use class="icon-menu" href="./images/svg/sprite.svg#menu"></use>
+          <use class="icon-close" href="./images/svg/sprite.svg#close"></use>
+        </svg>
+      </button>
 
-				</svg>
-			</button>
+      <div class="menu" id="menu" data-menu>
+        <ul class="navigation list">
+          <li class="navigation__item">
+            <a class="navigation__link link" href="">Программа обучения</a>
+          </li>
+          <li class="navigation__item">
+            <a
+              class="navigation__link navigation__link-active link"
+              href="./index.html"
+              >О нас</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link link" href="">Варианты обучения</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link link" href="">Контакты</a>
+          </li>
+        </ul>
 
-			<div class="menu-conteiner" id="menu-conteiner" data-menu>
-				<a class="logo-menu link" lang="en" href="./index.html">
-					Hell
-					<svg class="logo-svg" width="" height="">
-						<use href="./images/svg/sprite.svg#fire"></use>
-					</svg>
-					EN
-					<span class="under-logo-menu"> <span class="under-logo-orange">Адский</span> английский</span>
-				</a>
-
-				<ul class="navigation-list list">
-					<li class="navigation-list-item">
-						<a class="navigation-list-link link" href="">Программа обучения</a>
-					</li>
-					<li class="navigation-list-item">
-						<a class="navigation-list-link-active link" href="./index.html">О нас</a>
-					</li>
-					<li class="navigation-list-item">
-						<a class="navigation-list-link link" href="">Варианты обучения</a>
-					</li>
-					<li class="navigation-list-item">
-						<a class="navigation-list-link link" href="">Контакты</a>
-					</li>
-				</ul>
-				<a href="tel:+380000000000" class="button link">Консультация по телефону</a>
-				<!-- id="tel" - !!!!!!! ПРИЦЕПИТЬ К ТЕЛЕФОНУ В ФУТЕРЕ !!!!!!!!!!!!-->
-
-			</div>
-		</nav>
-	</div>
-
+        <a class="link" href="tel:+380000000000" class="button link"
+          >Консультация по телефону</a
+        >
+      </div>
+    </nav>
+  </div>
 </header>
