--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,4 @@
-
-    <header class="header">
-   <div class="container"> 
-    <div class="header-section">
+<header class="header container">
       <nav class="navigation">
         <a class="logo logo__common" >
           <svg class="logo__icon" width="24" height="24">
@@ -17,6 +14,14 @@
               Library</a></li>
         </ul>
       </nav>
+      <input
+  class="l"
+  class="theme-switch__toggle"
+  type="checkbox"
+  name="theme"
+  id="theme-switch-toggle"
+  aria-label="Переключить между тёмной и светлой темой"
+/>
       <form class="search-form" id="search-form">
         <input
           class="search-input"
@@ -31,8 +36,6 @@
             </svg>
         </button>
       </form>
-    </div>
-  </div>
 </header>
 
 
