--- a/src/sass/components/_backdrop.scss
+++ b/src/sass/components/_backdrop.scss
@@ -10,9 +10,9 @@
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
     // overflow: scroll;
-    background: #000000;
+    background: var(-main-black-color);
     opacity: 0.25;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     transition: opacity .4s ease;
-    // transition: opacity 250ms var(--cubic);
+    transition: var(--animation-timing-function);
 }
