adds basic team-modal

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,7 @@
 
 // import from folder vendors
 @import './vendors/normalize';
+@import './vendors/basicLightbox.min';
 
 // import from folder utils
 @import './utils/variables';
@@ -28,3 +29,4 @@
 @import './layout/header';
 @import './layout/gallery';
 @import './layout/header-lib';
+@import './layout/team-modal';
