--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -102,7 +102,7 @@
   width: 100%;
   @include Roboto(16, 14);
   @media screen and (min-width: 768px) {
-    width: 336px;
+  width: 336px;
   }
   background-color: transparent;
   border: transparent;
@@ -135,4 +135,12 @@
   border: transparent;
 
   color: var(--main-white-color);
+}
+
+.search-icon{
+  margin-right: 0px;
+  margin-left: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  z-index: 10;
 }
