--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,9 +19,9 @@
 // import from folder components
 @import './components/buttons';
 @import './components/toggle';
-@import './components/_modal-content.scss';
-@import './components/_modal.scss';
-@import './components/_backdrop.scss';
+@import './components/modal-content';
+@import './components/modal';
+@import './components/backdrop';
 
 // import from folder layout
 @import './layout/footer';
