--- a/src/templates/gallery.hbs
+++ b/src/templates/gallery.hbs
@@ -1,6 +1,6 @@
 {{#each this}}
   <li class='item'>
-    <a class='link' href='#'>
+    <a class='link' href='#' id={{id}}>
       <div class='video-card'>
         <img
           class='gallery__video'
