--- a/src/templates/modalTpl.hbs
+++ b/src/templates/modalTpl.hbs
@@ -1,24 +1,30 @@
-<div class="backdrop is-hidden" data-modal>
-    <div class="modal">
-        <button type="button" class="modal__close-btn" data-modal-close>
-            <svg class="modal__icon-close" width="14px" height="14px">
-            <use href="./images/sprite.svg#icon-Vector"></use>
-            </svg>
-        </button> 
-        <img class="modal-card__img" src="{{backdrop_path}}" alt="film poster">
-        <div class="modal-card__wrapper">
-            <h2 class="modal-card__title">{{title}}</h2>
-            <ul class="modal-card__list">
-                <li class="modal-card__item">Vote / Votes<span class="modal-card-data">{{vote_average}}/{{vote_count}}</span></li>
-                <li class="modal-card__item">Popularity<span class="modal-card-data">{{popularity}}</span></li>
-                <li class="modal-card__item">Original title<span class="modal-card-data">{{original_title}}</span></li>
-                <li class="modal-card__item">Genre<span class="modal-card-data">{{genres.name}}</span></li>
-            </ul>
-            <p class="modal-card__description">{{overview}}</p>
-            <div class="modal-card__btn">
-               <button type="submit" class=""></button>
-               <button type="submit" class=""></button>  
-            </div>
-        </div>
+<div class='backdrop is-hidden' data-modal>
+  <div class='modal'>
+    <button type='button' class='modal__close-btn' data-modal-close>
+      <svg class='modal__icon-close' width='14px' height='14px'>
+        <use href='./images/sprite.svg#icon-Vector'></use>
+      </svg>
+    </button>
+    <img class='modal-card__img' src='{{backdrop_path}}' alt='film poster' />
+    <div class='modal-card__wrapper'>
+      <h2 class='modal-card__title'>{{title}}</h2>
+      <ul class='modal-card__list'>
+        <li class='modal-card__item'>Vote / Votes<span
+            class='modal-card-data'
+          >{{vote_average}}/{{vote_count}}</span></li>
+        <li class='modal-card__item'>Popularity<span
+            class='modal-card-data'
+          >{{popularity}}</span></li>
+        <li class='modal-card__item'>Original title<span
+            class='modal-card-data'
+          >{{original_title}}</span></li>
+        <li class='modal-card__item'>Genre<span class='modal-card-data'>{{genres.name}}</span></li>
+      </ul>
+      <p class='modal-card__description'>{{overview}}</p>
+      <div class='modal-card__btn'>
+        <button type='button' class='button-orange watchedBtn-js'>add to Watched</button>
+        <button type='button' class='button-white queueBtn-js'>add to queue</button>
+      </div>
     </div>
+  </div>
 </div>
