adds team-modal styles

--- a/src/sass/layout/_team-modal.scss
+++ b/src/sass/layout/_team-modal.scss
@@ -14,13 +14,27 @@
 }
 
 .team-card-list-item {
-  flex-basis: calc(100% / 3 - 30px);
+  text-align: center;
+  flex-basis: calc(100% / 4 - 30px);
   margin-left: 30px;
   margin-top: 30px;
 }
 
 .team-card-list-img {
   border-radius: 50%;
+}
+
+.team-discription,
+.team-contact {
+  color: var(--main-white-color);
+}
+
+.team-contact {
+  font-size: 12px;
+}
+
+.team-name {
+  color: var(--background-accent);
 }
 
 // .team-modal {
