--- a/src/templates/team-modal.hbs
+++ b/src/templates/team-modal.hbs
@@ -5,7 +5,7 @@
             <img src="{{foto}}" alt="Foto{{name}}" class="team-card-list-img">
             <h2 class="team-name">{{name}}</h2>
             <p class="team-discription">{{role}}</p>
-            <a class="team-contact" href="mailto:{{mail}}">{{mail}}</a>
+            <a class="team-contact link" href="mailto:{{mail}}">{{mail}}</a>
         </li>
     {{/each}}
     </ul>
