--- a/src/templates/gallery.hbs
+++ b/src/templates/gallery.hbs
@@ -11,7 +11,8 @@
       </div>
       <h2 class='video-title'>{{original_title}} </h2>
       <div>
-        {{genres}}
+        <span class="video__details">{{genres}} | {{release_date}}</span>
+        <span class="video__vote">{{vote_average}}</span>
       </div>
     </a>
   </li>
