--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -23,6 +23,7 @@
 @import './components/modal-content';
 @import './components/modal';
 @import './components/backdrop';
+@import './components/pagination';
 
 // import from folder layout
 @import './layout/footer';
