--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,41 +1,91 @@
 @media screen and (min-width: $mobile) {
   .header {
     position: relative;
-    background-color: black;
+    background: white;
   }
 
   .menu-logo {
-    padding: 30px 0 50px 0;
+    padding: 30px 0 0 0;
   }
 
   .menu-logo .logo__text {
-    color: $dark-theme-color;
+    color: black;
   }
 
   .menu-logo .subtitle-logo {
+    color: black;
+  }
+
+  .is-open-bg-dark {
+    background: rgba(17, 21, 24, 0.9);
+  }
+
+  .is-open-bg-dark .menu-logo .logo__text {
     color: $dark-theme-color;
   }
 
+  .is-open-bg-dark .menu-logo .subtitle-logo {
+    color: $dark-theme-color;
+  }
+
+  .nav {
+    position: relative;
+  }
+
+  .menu {
+    display: none;
+  }
+
   .menu-button {
+    position: fixed;
+    top: 30px;
+    right: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 0;
     padding: 0;
+    border: 0;
+    background-color: transparent;
+  }
+
+  .menu-button > .button-svg {
+    width: 20px;
+    height: 20px;
+  }
+
+  .menu-button > .button-svg > .icon-close {
+    display: none;
+  }
+
+  .is-open {
+    display: block;
+  }
+
+  .is-open > .button-svg > .icon-menu {
+    display: none;
+  }
+
+  .is-open > .button-svg > .icon-close {
+    display: block;
   }
 
   .navigation {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    padding-top: 50px;
+    margin-bottom: 50px;
+
+    &__item:not(:last-child) {
+      margin-bottom: 15px;
+    }
 
     &__link {
       font-size: 20px;
       font-weight: 800;
       color: $dark-theme-color;
     }
-  }
-  .is-open {
-    display: none;
   }
 }
 
