fix button header

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,10 +36,11 @@
             <a class="navigation__link link" href="">Контакты</a>
           </li>
         </ul>
-
-        <a class="link" href="tel:+380000000000" class="button link"
-          >Консультация по телефону</a
-        >
+      </div>
+      <div class="tel-link-wrapper">
+        <a class="tel-link link" href="tel:+380000000000" class="button link">
+          Консультация по телефону
+        </a>
       </div>
     </nav>
   </div>
