--- a/src/templates/modalTpl.hbs
+++ b/src/templates/modalTpl.hbs
@@ -1,8 +1,6 @@
-<div class='modal'>
+<div class='modal' id='{{id}}'>
   <button type='button' class='modal__close-btn'>
-    <svg class='modal__icon-close' width='14px' height='14px'>
-      <use href='../images/icons/close.svg'></use>
-    </svg>
+    X
   </button>
   <img class='modal-card__img' src='{{backdrop_path}}' alt='film poster' />
   <div class='modal-card__wrapper'>
